--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,8 +14,16 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin-block-end: 0;
 }
 
@@ -32,14 +40,21 @@ body {
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-wrap: balance;
 }
 
@@ -57,8 +72,10 @@ picture {
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
 }
@@ -76,13 +93,111 @@ textarea:not([rows]) {
 /*CSS RESET END*/
 
 
-  body {
-    font-family: "Roboto", sans-serif;
-    font-size: 1rem;
-    background-color: #e9dfe2 ;
-  }
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  background-color: #e9dfe2;
+}
 
-  /* navbar mobile */
+.contenedor-header {
+  display: none;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.nav-bar {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.contenedor-nav {
+  display: none;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  
+}
+
+.header-nav {
+  display: flex;
+  margin: 0 auto;
+  
+
+}
+
+.header-nav.active {
+  display: block;
+}
+
+
+
+.header-nav ul {
+  display: flex;
+  list-style: none;
+}
+
+.header-nav ul li {
+  margin: 0 6px;
+}
+
+.nav-bar a {
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+}
+
+.form-search,
+.logo-header {
+  width: calc(50% - 10px);
+}
+
+.search-bar {
+  width: 45%;
+  margin: 15px;
+}
+
+.header-form {
+  position: relative;
+}
+
+.header-form input {
+  width: 80%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+
+
+}
+
+.header-form input:focus {
+  outline-color: #363062;
+
+}
+
+.header-form a {
+  text-decoration: none;
+  color: #666;
+}
+
+.header-form a i {
+  margin: 3px;
+  padding: 9px;
+  background-color: white;
+  border-radius: 5px;
+  position: absolute;
+  right: 20%;
+}
+
+.img-header {
+  width: 30%;
+  min-width: 100px;
+  max-width: 200px;
+}
+
+/* navbar mobile */
 
 .mob__navbar {
   display: flex;
@@ -93,9 +208,10 @@ textarea:not([rows]) {
   left: 0;
   position: fixed;
   width: 100%;
+  height: 10%;
   z-index: 100;
   align-items: center;
-  
+
 }
 
 .nav-item {
@@ -108,22 +224,25 @@ textarea:not([rows]) {
   font-size: 0.875rem;
 }
 
+.img-nav {
+  width: 150px;
+  min-width: 100px;
+}
 
 
-
-  /* Sección de productos */
+/* Sección de productos */
 .products__section {
   display: flex;
   flex-direction: column;
 }
 
-.card__wrapper{
+.card__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
-.product__card{
+.product__card {
   max-width: 18rem;
   border: 1px solid #000;
   border-radius: 0.5rem;
@@ -139,7 +258,7 @@ textarea:not([rows]) {
 .product__description {
   display: flex;
   flex-direction: column;
-  font-size: 0.875rem ;
+  font-size: 0.875rem;
   padding: 0.5rem 1rem;
   gap: 0.5rem
 }
@@ -154,14 +273,16 @@ textarea:not([rows]) {
   padding-right: 0.25rem;
 }
 
-.item{
+.item {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.end{
+
+.end {
   padding-bottom: 30px;
 }
-main{
+
+main {
   margin-bottom: 30px;
   padding-left: 15px;
   padding-right: 15px;
@@ -170,29 +291,34 @@ main{
 /* register */
 .account {
   width: 100%;
-  max-width: 400px; 
+  max-width: 400px;
   background-color: #fff;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
-.cuentas{
+
+.cuentas {
   text-align: left;
 }
-.form-input{
+
+.form-input {
   width: 80vw;
   margin-bottom: 3px;
   border: 1px solid lightblue;
   height: 30px;
   border-radius: 5px;
 }
-.info{
+
+.info {
   width: 90vw;
   margin-top: 10px;
 }
-.cta{
+
+.cta {
   text-align: center;
 }
+
 .btn {
   display: inline-block;
   width: 150px;
@@ -207,12 +333,12 @@ main{
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  
+
 }
 
 .btn-accent {
   color: #fff;
-  background-color:#363062;
+  background-color: #363062;
   border-color: #2c2750;
 }
 
@@ -228,10 +354,30 @@ main{
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 5px; 
-  box-sizing: border-box; 
+  padding: 5px;
+  box-sizing: border-box;
   border-radius: 10px;
 }
-.search__mobile i{
+
+.search__mobile i {
   position: left;
+}
+
+@media (min-width: 361px) {
+ 
+  header {
+  padding: 20px;
+  background-color: #363062;
+}
+ 
+  .contenedor-nav {
+    display: flex;
+  }
+  .contenedor-header {
+    display: flex;
+  }
+  .mob__navbar {
+    display: none;
+  }
+
 }
