--- a/src/views/login.html
+++ b/src/views/login.html
@@ -23,62 +23,59 @@
 
 <body>
   <header>
-    <nav>
-      <div id="logo">
+    <div class="contenedor-header">
+      <div id="logo" class="logo-header img-header">
         <img src="/images/PowerCore.svg" alt="PowerCore">
       </div>
-      <div id="menu">
-        <ul>
+      <div id="search" class="form-search">
+        <form class="header-form" action="#" method="GET">
+          <input placeholder="Buscar productos, marcas y más" type="text">
+          <a href="#"><i class="fa fa-search"></i></a>
+        </form>
+      </div>
+    </div>
+    <div class="contenedor-nav">
+
+      <nav class="header-nav">
+        <ul class="nav-bar">
           <li><a href="/">Inicio</a></li>
           <li><a href="#">Productos</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
+        <ul class="nav-bar">
+          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="mob__navbar">
+      <div class="nav-item home">
+        <a href="/">
+          <img class="img-nav" src="images/PowerCore.svg" alt="">
+        </a>
       </div>
-      <div id="search">
-        <input type="text" placeholder="Buscar...">
-        <button><i class="fas fa-search"></i></button>
-      </div>
-      <div id="user">
-        <i class="fas fa-user" onclick="toggleUserMenu()"></i>
-        <div id="user-menu">
-          <ul>
-            <li><a href="/register">Registrarse</a></li>
-            <li><a href="/login">Ingresar</a></li>
-            <li><a href="/productCart">Ver Pedidos</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="cart">
-        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-      </div>
-    </nav>
-  </header>
+      <div class="nav-item">
+        <button class="search__mobile">
+          <i class="fa-solid fa-magnifying-glass"></i>
 
-  <div class="mob__navbar">
-    <div class="nav-item home">
-      <a href="/">
-        <img src="images/PowerCore.svg" alt="">
-      </a>
+        </button>
+      </div>
+      <div class="nav-item">
+        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+          <br>
+          Carrito</a>
+      </div>
+      <div class="nav-item">
+        <i class="fa-solid fa-bars"></i>
+        Menu
+      </div>
     </div>
-    <div class="nav-item">
-      <button class="search__mobile">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        
-      </button>
     </div>
-    <div class="nav-item">
-      <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
-        <br>
-        Carrito</a>
-    </div>
-    <div class="nav-item">
-      <i class="fa-solid fa-bars"></i>
-      Menu
-    </div>
-  </div>
+  </header>
   <main>
     <div class="account">
-  
+
       <div class="item">
         <div style="display:none" class="item-login">
           <h3>Ingresar con una cuenta</h3>
@@ -90,13 +87,23 @@
                 <div style="height:40px;width:350px;" class="abcRioButton abcRioButtonLightBlue">
                   <div class="abcRioButtonContentWrapper">
                     <div class="abcRioButtonIcon" style="padding:10px">
-                      <div style="width:18px;height:18px;" class="abcRioButtonSvgImageWithFallback abcRioButtonIconImage abcRioButtonIconImage18">
-                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 48 48" class="abcRioButtonSvg">
+                      <div style="width:18px;height:18px;"
+                        class="abcRioButtonSvgImageWithFallback abcRioButtonIconImage abcRioButtonIconImage18">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px"
+                          viewBox="0 0 48 48" class="abcRioButtonSvg">
                           <g>
-                            <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path>
-                            <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path>
-                            <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path>
-                            <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path>
+                            <path fill="#EA4335"
+                              d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">
+                            </path>
+                            <path fill="#4285F4"
+                              d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z">
+                            </path>
+                            <path fill="#FBBC05"
+                              d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z">
+                            </path>
+                            <path fill="#34A853"
+                              d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z">
+                            </path>
                             <path fill="none" d="M0 0h48v48H0z"></path>
                           </g>
                         </svg>
@@ -112,9 +119,17 @@
             </div>
             <!-- FACEBOOK LOGIN -->
             <div class="form-group face">
-              <div class="fb-login-button fb_iframe_widget" data-width="350" data-size="large" data-onlogin="onLoginFB()" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="false" data-scope="email" login_text="" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=1337166216635779&amp;auto_logout_link=false&amp;button_type=login_with&amp;container_width=0&amp;locale=es_LA&amp;login_text=&amp;scope=email&amp;sdk=joey&amp;size=large&amp;use_continue_as=false&amp;width=350">
+              <div class="fb-login-button fb_iframe_widget" data-width="350" data-size="large"
+                data-onlogin="onLoginFB()" data-button-type="login_with" data-auto-logout-link="false"
+                data-use-continue-as="false" data-scope="email" login_text="" fb-xfbml-state="rendered"
+                fb-iframe-plugin-query="app_id=1337166216635779&amp;auto_logout_link=false&amp;button_type=login_with&amp;container_width=0&amp;locale=es_LA&amp;login_text=&amp;scope=email&amp;sdk=joey&amp;size=large&amp;use_continue_as=false&amp;width=350">
                 <span style="vertical-align: bottom; width: 0px; height: 0px;">
-                  <iframe name="f912a5345b7ddac5b" width="350px" height="1000px" data-testid="fb:login_button Facebook Social Plugin" title="fb:login_button Facebook Social Plugin" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" src="https://www.facebook.com/v5.0/plugins/login_button.php?app_id=1337166216635779&amp;auto_logout_link=false&amp;button_type=login_with&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df45735c087a6c057f%26domain%3Dwww.xt-pc.com.ar%26is_canvas%3Dfalse%26origin%3Dhttps%253A%252F%252Fwww.xt-pc.com.ar%252Ff15a24e1fe5ef52ae%26relation%3Dparent.parent&amp;container_width=0&amp;locale=es_LA&amp;login_text=&amp;scope=email&amp;sdk=joey&amp;size=large&amp;use_continue_as=false&amp;width=350" class="" style="border: none; visibility: visible; width: 0px; height: 0px;"></iframe>
+                  <iframe name="f912a5345b7ddac5b" width="350px" height="1000px"
+                    data-testid="fb:login_button Facebook Social Plugin" title="fb:login_button Facebook Social Plugin"
+                    frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no"
+                    allow="encrypted-media"
+                    src="https://www.facebook.com/v5.0/plugins/login_button.php?app_id=1337166216635779&amp;auto_logout_link=false&amp;button_type=login_with&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df45735c087a6c057f%26domain%3Dwww.xt-pc.com.ar%26is_canvas%3Dfalse%26origin%3Dhttps%253A%252F%252Fwww.xt-pc.com.ar%252Ff15a24e1fe5ef52ae%26relation%3Dparent.parent&amp;container_width=0&amp;locale=es_LA&amp;login_text=&amp;scope=email&amp;sdk=joey&amp;size=large&amp;use_continue_as=false&amp;width=350"
+                    class="" style="border: none; visibility: visible; width: 0px; height: 0px;"></iframe>
                 </span>
               </div>
             </div>
@@ -126,10 +141,12 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="Login" data-gtm-form-interact-id="2">
               <div class="form-group">
-                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email" data-gtm-form-interact-field-id="2">
+                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email"
+                  data-gtm-form-interact-field-id="2">
               </div>
               <div class="form-group">
-                <input class="form-input" type="password" name="password" id="password" required="" placeholder="Contraseña" data-gtm-form-interact-field-id="3">
+                <input class="form-input" type="password" name="password" id="password" required=""
+                  placeholder="Contraseña" data-gtm-form-interact-field-id="3">
               </div>
             </form>
           </div>
@@ -145,7 +162,8 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="PassRec" data-gtm-form-interact-id="0">
               <div class="form-group">
-                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email" data-gtm-form-interact-field-id="0">
+                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email"
+                  data-gtm-form-interact-field-id="0">
               </div>
             </form>
           </div>
@@ -161,7 +179,8 @@
           <div class="content col-2">
             <form action="javascript:void(0)" id="Activation" data-gtm-form-interact-id="1">
               <div class="form-group">
-                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email" data-gtm-form-interact-field-id="1">
+                <input class="form-input" type="email" name="email" id="email" required="" placeholder="Email"
+                  data-gtm-form-interact-field-id="1">
               </div>
             </form>
           </div>
