--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -23,80 +23,82 @@
 
 <body>
   <header>
-    <nav>
-      <div id="logo">
+    <div class="contenedor-header">
+      <div id="logo" class="logo-header img-header">
         <img src="/images/PowerCore.svg" alt="PowerCore">
       </div>
-      <div id="menu">
-        <ul>
+      <div id="search" class="form-search">
+        <form class="header-form" action="#" method="GET">
+          <input placeholder="Buscar productos, marcas y más" type="text">
+          <a href="#"><i class="fa fa-search"></i></a>
+        </form>
+      </div>
+    </div>
+    <div class="contenedor-nav">
+
+      <nav class="header-nav">
+        <ul class="nav-bar">
           <li><a href="/">Inicio</a></li>
           <li><a href="#">Productos</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
+        <ul class="nav-bar">
+          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="mob__navbar">
+      <div class="nav-item home">
+        <a href="/">
+          <img class="img-nav" src="images/PowerCore.svg" alt="">
+        </a>
       </div>
-      <div id="search">
-        <input type="text" placeholder="Buscar...">
-        <button><i class="fas fa-search"></i></button>
-      </div>
-      <div id="user">
-        <i class="fas fa-user" onclick="toggleUserMenu()"></i>
-        <div id="user-menu">
-          <ul>
-            <li><a href="/register">Registrarse</a></li>
-            <li><a href="/login">Ingresar</a></li>
-            <li><a href="/productCart">Ver Pedidos</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="cart">
-        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-      </div>
-    </nav>
-  </header>
+      <div class="nav-item">
+        <button class="search__mobile">
+          <i class="fa-solid fa-magnifying-glass"></i>
 
-  <div class="mob__navbar">
-    <div class="nav-item home">
-      <a href="/">
-        <img src="images/PowerCore.svg" alt="">
-      </a>
+        </button>
+      </div>
+      <div class="nav-item">
+        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+          <br>
+          Carrito</a>
+      </div>
+      <div class="nav-item">
+        <i class="fa-solid fa-bars"></i>
+        Menu
+      </div>
     </div>
-    <div class="nav-item">
-      <button class="search__mobile">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        
-      </button>
     </div>
-    <div class="nav-item">
-      <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
-        <br>
-        Carrito</a>
-    </div>
-    <div class="nav-item">
-      <i class="fa-solid fa-bars"></i>
-      Menu
-    </div>
-  </div>
+  </header>
   <main>
     <div class="cont air-v">
       <div class="breadcrumb">
         <a href="/">HOME</a> <span class="sep"> /</span>
         <h1>CARRITO</h1>
       </div>
-      <div role="alert" id="success" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Carrito actualizado</div>
-      <div role="alert" id="enviogratis" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Envio gratis aplicado.</div>
-      <div role="alert" id="danger" style="display:none"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Hubo un error al eliminar el producto</div>
-      <div id="dangercupon" style="display:none"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Cupon inválido</div>
+      <div role="alert" id="success" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Carrito
+        actualizado</div>
+      <div role="alert" id="enviogratis" style="display:none"><i class="fa fa-shopping-cart"
+          aria-hidden="true"></i>Envio gratis aplicado.</div>
+      <div role="alert" id="danger" style="display:none"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+        Hubo un error al eliminar el producto</div>
+      <div id="dangercupon" style="display:none"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Cupon
+        inválido</div>
       <div class="cart air">
         <div class="item end" style="padding:0;">
           <div class="cta" style="width:100%;justify-content: flex-end;">
-            <button onclick="shareCart();" class="btn btn-outline btn-sm" name="share" id="share">Compartir carrito</button>
+            <button onclick="shareCart();" class="btn btn-outline btn-sm" name="share" id="share">Compartir
+              carrito</button>
             <input class="btn btn-outline" style="display:none;width:100%; " id="texto">
             <button class="btn btn-accent" style="display:none" id="copiar">Copiar</button>
           </div>
         </div>
         <div class="item">
           <div class="image">
-            <a href="#"><img src="/img/productos/5/PCA003.jpg"  alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
+            <a href="#"><img src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit"></a>
           </div>
           <div class="meta">
             <div class="title"><a href="#">
@@ -112,7 +114,8 @@
             <form action="javascript:void(0)" id="cartUpdate11398">
               <input type="hidden" name="idprod" value="11398">
               <button onclick="decrementValue('11398');cartUpdate(11398);"><i class="fas fa-minus"></i></button>
-              <input onchange="cartUpdate(11398);" class="form-input" type="number" step="1" min="0" max="20" name="quantity" id="prod-qty11398" value="1" title="Cantidad" inputmode="numeric">
+              <input onchange="cartUpdate(11398);" class="form-input" type="number" step="1" min="0" max="20"
+                name="quantity" id="prod-qty11398" value="1" title="Cantidad" inputmode="numeric">
               <button onclick="incrementValue('11398');cartUpdate(11398);"><i class="fas fa-plus"></i></button>
             </form>
           </div>
