--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -23,215 +23,218 @@
 
 <body>
   <header>
-    <nav>
-      <div id="logo">
+    <div class="contenedor-header">
+      <div id="logo" class="logo-header img-header">
         <img src="/images/PowerCore.svg" alt="PowerCore">
       </div>
-      <div id="menu">
-        <ul>
+      <div id="search" class="form-search">
+        <form class="header-form" action="#" method="GET">
+          <input placeholder="Buscar productos, marcas y más" type="text">
+          <a href="#"><i class="fa fa-search"></i></a>
+        </form>
+      </div>
+    </div>
+    <div class="contenedor-nav">
+
+      <nav class="header-nav">
+        <ul class="nav-bar">
           <li><a href="/">Inicio</a></li>
           <li><a href="#">Productos</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
+        <ul class="nav-bar">
+          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="mob__navbar">
+      <div class="nav-item home">
+        <a href="/">
+          <img class="img-nav" src="images/PowerCore.svg" alt="">
+        </a>
       </div>
-      <div id="search">
-        <input type="text" placeholder="Buscar...">
-        <button><i class="fas fa-search"></i></button>
-      </div>
-      <div id="user">
-        <i class="fas fa-user" onclick="toggleUserMenu()"></i>
-        <div id="user-menu">
-          <ul>
-            <li><a href="/register">Registrarse</a></li>
-            <li><a href="/login">Ingresar</a></li>
-            <li><a href="/productCart">Ver Pedidos</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="cart">
-        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-      </div>
-    </nav>
-  </header>
+      <div class="nav-item">
+        <button class="search__mobile">
+          <i class="fa-solid fa-magnifying-glass"></i>
 
-  <div class="mob__navbar">
-    <div class="nav-item home">
-      <a href="/">
-        <img src="images/PowerCore.svg" alt="">
-      </a>
+        </button>
+      </div>
+      <div class="nav-item">
+        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+          <br>
+          Carrito</a>
+      </div>
+      <div class="nav-item">
+        <i class="fa-solid fa-bars"></i>
+        Menu
+      </div>
     </div>
-    <div class="nav-item">
-      <button class="search__mobile">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        
-      </button>
     </div>
-    <div class="nav-item">
-      <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
-        <br>
-        Carrito</a>
-    </div>
-    <div class="nav-item">
-      <i class="fa-solid fa-bars"></i>
-      Menu
-    </div>
-  </div>
+  </header>
   <main class="cont air-v">
     <div class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList">
-        <a href="/" itemprop="itemListElement" typeof="ListItem">
-            <span itemprop="item">
-                <span itemprop="name">HOME</span>
-                <meta itemprop="position" content="1">
-            </span>
-        </a>
-        <span class="sep"> /</span>
-        <a href="/cat/supra/5/equipos/1" itemprop="itemListElement" typeof="ListItem">
-            <span itemprop="item">
-                <span itemprop="name">EQUIPOS</span>
-                <meta itemprop="position" content="2">
-            </span>
-        </a>
-        <span class="sep"> /</span>
-        <a href="/cat/398/pc-armada-amd-athlon/1" itemprop="itemListElement" typeof="ListItem">
-            <span itemprop="item">
-                <span itemprop="name"> PC ARMADA AMD ATHLON </span>
-                <meta itemprop="position" content="3">
-            </span>
-        </a>
-        <span class="sep"> /</span>
-        <span itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <span itemprop="item">
-                <span itemprop="name">PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</span>
-                <meta itemprop="position" content="4">
-            </span>
+      <a href="/" itemprop="itemListElement" typeof="ListItem">
+        <span itemprop="item">
+          <span itemprop="name">HOME</span>
+          <meta itemprop="position" content="1">
         </span>
+      </a>
+      <span class="sep"> /</span>
+      <a href="/cat/supra/5/equipos/1" itemprop="itemListElement" typeof="ListItem">
+        <span itemprop="item">
+          <span itemprop="name">EQUIPOS</span>
+          <meta itemprop="position" content="2">
+        </span>
+      </a>
+      <span class="sep"> /</span>
+      <a href="/cat/398/pc-armada-amd-athlon/1" itemprop="itemListElement" typeof="ListItem">
+        <span itemprop="item">
+          <span itemprop="name"> PC ARMADA AMD ATHLON </span>
+          <meta itemprop="position" content="3">
+        </span>
+      </a>
+      <span class="sep"> /</span>
+      <span itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+        <span itemprop="item">
+          <span itemprop="name">PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</span>
+          <meta itemprop="position" content="4">
+        </span>
+      </span>
     </div>
 
     <div class="product">
-        <div class="img air">
-            <div class="featured">
-                <img id="mainpic" src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
-            </div>
-            <div class="more">
-                <div class="item">
-                    <img src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+      <div class="img air">
+        <div class="featured">
+          <img id="mainpic" src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+        </div>
+        <div class="more">
+          <div class="item">
+            <img src="/img/productos/5/PCA003.jpg" alt="pc-armada-amd-athlon-3000g-8gb-240gb-kit">
+          </div>
+          <!-- Additional images gallery -->
+        </div>
+        <div class="info-img">
+          * LAS IMÁGENES SON AL EFECTO MERAMENTE ILUSTRATIVO Y NO SON CONTRACTUALES
+        </div>
+      </div>
+
+      <div class="meta">
+        <h1>PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</h1>
+        <div class="shipping">
+          Código del producto: <strong>PCA003</strong>
+        </div>
+        <div class="price-main">
+          Precio efectivo o transferencia <br><span class="price-num">$235.569,93</span> <span style="display:none"
+            class="price-old">$259.126,92</span>
+        </div>
+        <div class="price-mp">
+          Precio MercadoPago $259.126,92 <img src="/img/mercadopago.png" alt="">
+        </div>
+        <div class="price-main" style="font-size:22px">
+          ¡6 cuotas de $49.077,07!
+        </div>
+        <div class="shipping">
+          <span>Solo para envío a domicilio, entrega en 72hs</span>
+        </div>
+        <div class="tags">
+          <span class="tag tag-stock">En stock</span>
+        </div>
+        <div class="qty">
+          <form action="javascript:void(0)" id="AddCart">
+            <input type="hidden" name="idprod" value="11398">
+            <button onclick="decrementValue('');"><i class="fas fa-minus"></i></button>
+            <input class="form-input" type="number" step="1" min="0" max="5" name="quantity" id="prod-qty" value="1"
+              title="Cantidad" inputmode="numeric">
+            <button onclick="incrementValue('');"><i class="fas fa-plus"></i></button>
+          </form>
+        </div>
+        <div class="ctas">
+          <div class="item" style="width:100%; margin-bottom:10px;"><a data-modal="#modalwin" name="modal"
+              class="btn-accent">Comprar ahora</a></div>
+          <div class="item"><a data-modal="#modalwin" name="modal" class="btn-outline"><i
+                class="fas fa-shopping-cart"></i> Agregar</a></div>
+          <div class="item"><button data-modal="#modalenvio" name="modal" class="btn-outline btn-full">Calcular
+              envío</button></div>
+        </div>
+        <div class="ctas ctasalt">
+          <div style="display:none" class="item"><button data-modal="#modalcuotas" name="modal"
+              class="btn-outline btn-full">Calcular cuotas</button></div>
+        </div>
+      </div>
+
+      <div class="meta-tags">
+        <a href="/tag/pc">pc</a>
+        <a href="/tag/amd">amd</a>
+        <a href="/tag/athlon">athlon</a>
+        <a href="/tag/max5">max5</a>
+      </div>
+
+      <div class="info air">
+        <h1>ESTE EQUIPO ARMADO INCLUYE:</h1>
+        <h2>1 | GABINETE KIT<br>
+          1 | MOTHER A320M DDR4 AM4<br>
+          1 | MICRO AMD ATHLON 3000G C/VIDEO RADEON VEGA 3 INTEGRADO<br>
+          1 | MEMORIA 8GB 3200 DDR4<br>
+          1 | HD SSD 240GB</h2>
+        <p>*** NO INCLUYE SISTEMA OPERATIVO ***<br>
+          *** INCLUYE TECLADO / MOUSE ***</p>
+      </div>
+
+      <div class="also air">
+        <h2>Productos relacionados</h2>
+        <div class="also-products">
+          <div class="item product-xs">
+            <a href="/prod/11063/pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
+              <div class="image-full">
+                <img src="/img/productos/5/PCA006.jpg" alt="pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
+              </div>
+              <div class="info">
+                <h3 class="tituloalto" style="height: 55px;">PC ARMADA AMD ATHLON 3000G+8GB+1TB SSD+MONITOR 22"</h3>
+                <div class="price">$404.489,92 <span class="price-promo">$444.938,88</span></div>
+                <div class="cta">
+                  <div class="btn btn-outline" onclick="quickAddCart(11063,1)">
+                    <i class="fas fa-shopping-cart"></i> Agregar
+                  </div>
                 </div>
-                <!-- Additional images gallery -->
-            </div>
-            <div class="info-img">
-                * LAS IMÁGENES SON AL EFECTO MERAMENTE ILUSTRATIVO Y NO SON CONTRACTUALES
-            </div>
+              </div>
+            </a>
+          </div>
+          <!-- Additional related products -->
         </div>
+      </div>
 
-        <div class="meta">
-            <h1>PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</h1>
-            <div class="shipping">
-                Código del producto: <strong>PCA003</strong>
-            </div>
-            <div class="price-main">
-                Precio efectivo o transferencia <br><span class="price-num">$235.569,93</span> <span style="display:none" class="price-old">$259.126,92</span>
-            </div>
-            <div class="price-mp">
-                Precio MercadoPago $259.126,92 <img src="/img/mercadopago.png" alt="">
-            </div>
-            <div class="price-main" style="font-size:22px">
-                ¡6 cuotas de  $49.077,07!
-            </div>
-            <div class="shipping">
-                <span>Solo para envío a domicilio, entrega en 72hs</span>
-            </div>
-            <div class="tags">
-                <span class="tag tag-stock">En stock</span>
-            </div>
-            <div class="qty">
-                <form action="javascript:void(0)" id="AddCart">
-                    <input type="hidden" name="idprod" value="11398">
-                    <button onclick="decrementValue('');"><i class="fas fa-minus"></i></button>
-                    <input class="form-input" type="number" step="1" min="0" max="5" name="quantity" id="prod-qty" value="1" title="Cantidad" inputmode="numeric">
-                    <button onclick="incrementValue('');"><i class="fas fa-plus"></i></button>
-                </form>
-            </div>
-            <div class="ctas">
-                <div class="item" style="width:100%; margin-bottom:10px;"><a data-modal="#modalwin" name="modal" class="btn-accent">Comprar ahora</a></div>
-                <div class="item"><a data-modal="#modalwin" name="modal" class="btn-outline"><i class="fas fa-shopping-cart"></i> Agregar</a></div>
-                <div class="item"><button data-modal="#modalenvio" name="modal" class="btn-outline btn-full">Calcular envío</button></div>
-            </div>
-            <div class="ctas ctasalt">
-                <div style="display:none" class="item"><button data-modal="#modalcuotas" name="modal" class="btn-outline btn-full">Calcular cuotas</button></div>
-            </div>
-        </div>
-
-        <div class="meta-tags">
-            <a href="/tag/pc">pc</a>
-            <a href="/tag/amd">amd</a>
-            <a href="/tag/athlon">athlon</a>
-            <a href="/tag/max5">max5</a>
-        </div>
-
-        <div class="info air">
-            <h1>ESTE EQUIPO ARMADO INCLUYE:</h1>
-            <h2>1 | GABINETE KIT<br>
-                1 | MOTHER A320M DDR4 AM4<br>
-                1 | MICRO AMD ATHLON 3000G C/VIDEO RADEON VEGA 3 INTEGRADO<br>
-                1 | MEMORIA 8GB 3200 DDR4<br>
-                1 | HD SSD 240GB</h2>
-            <p>*** NO INCLUYE SISTEMA OPERATIVO ***<br>
-                *** INCLUYE TECLADO / MOUSE ***</p>
-        </div>
-
-        <div class="also air">
-            <h2>Productos relacionados</h2>
-            <div class="also-products">
-                <div class="item product-xs">
-                    <a href="/prod/11063/pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
-                        <div class="image-full">
-                            <img src="/img/productos/5/PCA006.jpg"alt="pc-armada-amd-athlon-3000g-8gb-1tb-ssd-monitor-22">
-                        </div>
-                        <div class="info">
-                            <h3 class="tituloalto" style="height: 55px;">PC ARMADA AMD ATHLON 3000G+8GB+1TB SSD+MONITOR 22"</h3>
-                            <div class="price">$404.489,92 <span class="price-promo">$444.938,88</span></div>
-                            <div class="cta">
-                                <div class="btn btn-outline" onclick="quickAddCart(11063,1)">
-                                    <i class="fas fa-shopping-cart"></i> Agregar
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- Additional related products -->
-            </div>
-        </div>
-
-        <div class="prod-code">Código del producto: PCA003</div>
+      <div class="prod-code">Código del producto: PCA003</div>
     </div>
 
     <!-- Variants of cards -->
     <div class="card-variant">
-        <!-- Card variant 1 -->
-        <h2>Card Variant 1</h2>
-        <p>Description of variant 1.</p>
+      <!-- Card variant 1 -->
+      <h2>Card Variant 1</h2>
+      <p>Description of variant 1.</p>
     </div>
     <div class="card-variant">
-        <!-- Card variant 2 -->
-        <h2>Card Variant 2</h2>
-        <p>Description of variant 2.</p>
+      <!-- Card variant 2 -->
+      <h2>Card Variant 2</h2>
+      <p>Description of variant 2.</p>
     </div>
     <div class="card-variant">
-        <!-- Card variant 3 -->
-        <h2>Card Variant 3</h2>
-        <p>Description of variant 3.</p>
+      <!-- Card variant 3 -->
+      <h2>Card Variant 3</h2>
+      <p>Description of variant 3.</p>
     </div>
     <div class="card-variant">
-        <!-- Card variant 4 -->
-        <h2>Card Variant 4</h2>
-        <p>Description of variant 4.</p>
+      <!-- Card variant 4 -->
+      <h2>Card Variant 4</h2>
+      <p>Description of variant 4.</p>
     </div>
     <div class="card-variant">
-        <!-- Card variant 5 -->
-        <h2>Card Variant 5</h2>
-        <p>Description of variant 5.</p>
+      <!-- Card variant 5 -->
+      <h2>Card Variant 5</h2>
+      <p>Description of variant 5.</p>
     </div>
-</main>
+  </main>
 
   <footer>
     <p>&copy; 2024 PowerCore. Trabajo grupal N&deg; 5.</p>
