--- a/src/views/register.html
+++ b/src/views/register.html
@@ -23,65 +23,62 @@
 
 <body>
   <header>
-    <nav>
-      <div id="logo">
+    <div class="contenedor-header">
+      <div id="logo" class="logo-header img-header">
         <img src="/images/PowerCore.svg" alt="PowerCore">
       </div>
-      <div id="menu">
-        <ul>
+      <div id="search" class="form-search">
+        <form class="header-form" action="#" method="GET">
+          <input placeholder="Buscar productos, marcas y más" type="text">
+          <a href="#"><i class="fa fa-search"></i></a>
+        </form>
+      </div>
+    </div>
+    <div class="contenedor-nav">
+
+      <nav class="header-nav">
+        <ul class="nav-bar">
           <li><a href="/">Inicio</a></li>
           <li><a href="#">Productos</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
+        <ul class="nav-bar">
+          <li><a href="/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+          <li><a href="/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+          <li><a href="/productCart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="mob__navbar">
+      <div class="nav-item home">
+        <a href="/">
+          <img class="img-nav" src="images/PowerCore.svg" alt="">
+        </a>
       </div>
-      <div id="search">
-        <input type="text" placeholder="Buscar...">
-        <button><i class="fas fa-search"></i></button>
-      </div>
-      <div id="user">
-        <i class="fas fa-user" onclick="toggleUserMenu()"></i>
-        <div id="user-menu">
-          <ul>
-            <li><a href="/register">Registrarse</a></li>
-            <li><a href="/login">Ingresar</a></li>
-            <li><a href="/productCart">Ver Pedidos</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="cart">
-        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-      </div>
-    </nav>
-  </header>
+      <div class="nav-item">
+        <button class="search__mobile">
+          <i class="fa-solid fa-magnifying-glass"></i>
 
-  <div class="mob__navbar">
-    <div class="nav-item home">
-      <a href="/">
-        <img src="images/PowerCore.svg" alt="">
-      </a>
+        </button>
+      </div>
+      <div class="nav-item">
+        <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
+          <br>
+          Carrito</a>
+      </div>
+      <div class="nav-item">
+        <i class="fa-solid fa-bars"></i>
+        Menu
+      </div>
     </div>
-    <div class="nav-item">
-      <button class="search__mobile">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        
-      </button>
     </div>
-    <div class="nav-item">
-      <a href="productCart"><i class="fa-solid fa-cart-shopping"></i>
-        <br>
-        Carrito</a>
-    </div>
-    <div class="nav-item">
-      <i class="fa-solid fa-bars"></i>
-      Menu
-    </div>
-  </div>
+  </header>
   <main>
-    
+
     <div class="account">
       <div class="item">
 
-  
+
         <div class="item-login item-register">
           <h3>Registro de usuario</h3>
           <hr>
@@ -91,10 +88,12 @@
                 <input class="form-input" type="email" id="email" name="email" required="" placeholder="Email">
               </div>
               <div class="form-group">
-                <input class="form-input" type="password" id="password" name="password" required="" placeholder="Contraseña">
+                <input class="form-input" type="password" id="password" name="password" required=""
+                  placeholder="Contraseña">
               </div>
               <div class="form-group">
-                <input class="form-input" type="password" id="password2" name="password2" required="" placeholder="Confirmar contraseña">
+                <input class="form-input" type="password" id="password2" name="password2" required=""
+                  placeholder="Confirmar contraseña">
               </div>
               <div class="info">
                 <div class="item">Información personal</div>
@@ -106,10 +105,12 @@
                 <input class="form-input" type="text" id="apellido" name="apellido" required="" placeholder="Apellido">
               </div>
               <div class="form-group">
-                <input class="form-input" type="number" id="dni" name="dni" required="" placeholder="Número de DNI o CUIT">
+                <input class="form-input" type="number" id="dni" name="dni" required=""
+                  placeholder="Número de DNI o CUIT">
               </div>
               <div class="form-group">
-                <input class="form-input" type="number" id="tel" name="tel" required="" placeholder="Número de teléfono">
+                <input class="form-input" type="number" id="tel" name="tel" required=""
+                  placeholder="Número de teléfono">
               </div>
               <input type="hidden" id="express" name="express" value="0">
             </form>
@@ -121,16 +122,21 @@
             </div>
           </div>
         </div>
-  
+
       </div>
-  
+
       <div class="item">
         <div class="item-account">
           <h3>¿Por qué registrarse?</h3>
           <hr>
-          <p>Con tu registro podrás realizar compras online en nuestro sitio web. Los datos que dejes aquí los utilizaremos para contactarnos y enviarte los productos que hayas comprado. También los utilizaremos para la confección de los comprobantes fiscales que deben acompañar a dichos productos. No utilizaremos tus datos para ningún otro fin, ni para enviarte información que no hayas solicitado. Para más información mira nuestras <a href="#">políticas de privacidad</a>.</p>
+          <p>Con tu registro podrás realizar compras online en nuestro sitio web. Los datos que dejes aquí los
+            utilizaremos para contactarnos y enviarte los productos que hayas comprado. También los utilizaremos para la
+            confección de los comprobantes fiscales que deben acompañar a dichos productos. No utilizaremos tus datos
+            para ningún otro fin, ni para enviarte información que no hayas solicitado. Para más información mira
+            nuestras <a href="#">políticas de privacidad</a>.</p>
           <h4>Recordá:</h4>
-          <p>Es muy importante que coloques todos tus datos reales a la hora de registrar tu cuenta. Ante cualquier inconveniente vamos a estar comunicándonos con vos por teléfono o vía email.</p>
+          <p>Es muy importante que coloques todos tus datos reales a la hora de registrar tu cuenta. Ante cualquier
+            inconveniente vamos a estar comunicándonos con vos por teléfono o vía email.</p>
         </div>
       </div>
     </div>
